// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleLoaders快照 extractCSS为false 1`] = `
Array [
  Object {
    "test": /\\\\\\.css\\$/,
    "use": Array [
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/style-loader/dist/cjs.js",
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/css-loader/dist/cjs.js",
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/postcss-loader/dist/cjs.js",
        "options": Object {
          "postcssOptions": Object {
            "plugins": Array [
              [Function],
            ],
          },
        },
      },
    ],
  },
  Object {
    "test": /\\\\\\.less\\$/,
    "use": Array [
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/style-loader/dist/cjs.js",
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/css-loader/dist/cjs.js",
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/postcss-loader/dist/cjs.js",
        "options": Object {
          "postcssOptions": Object {
            "plugins": Array [
              [Function],
            ],
          },
        },
      },
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/less-loader/dist/cjs.js",
        "options": Object {
          "lessOptions": Object {
            "javascriptEnabled": true,
          },
        },
      },
    ],
  },
]
`;

exports[`styleLoaders快照 extractCSS为true 1`] = `
Array [
  Object {
    "test": /\\\\\\.css\\$/,
    "use": Array [
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/mini-css-extract-plugin/dist/loader.js",
      },
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/css-loader/dist/cjs.js",
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/postcss-loader/dist/cjs.js",
        "options": Object {
          "postcssOptions": Object {
            "plugins": Array [
              [Function],
            ],
          },
        },
      },
    ],
  },
  Object {
    "test": /\\\\\\.less\\$/,
    "use": Array [
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/mini-css-extract-plugin/dist/loader.js",
      },
      "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/css-loader/dist/cjs.js",
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/postcss-loader/dist/cjs.js",
        "options": Object {
          "postcssOptions": Object {
            "plugins": Array [
              [Function],
            ],
          },
        },
      },
      Object {
        "loader": "/Users/du/Documents/my/my-cli/du-formula/packages/cli/node_modules/less-loader/dist/cjs.js",
        "options": Object {
          "lessOptions": Object {
            "javascriptEnabled": true,
          },
        },
      },
    ],
  },
]
`;
